# ruine

./: .clang-format  .gitignore  .gitmodules  AndroidAssetService.cpp  AndroidAssetService.hpp  AndroidEngine.cpp  AndroidEngine.hpp  AndroidGLESContext.cpp  AndroidGLESContext.hpp  AndroidSoundService.cpp  AndroidSoundService.hpp  AssetService.cpp  AssetService.hpp  BoundingBox.hpp  CMakeLists.txt  ControllerService.hpp  DesktopAssetService.cpp  DesktopAssetService.hpp  DesktopSoundService.cpp  DesktopSoundService.hpp  Draw.cpp  Draw.hpp  Drawable.cpp  Drawable.hpp  EventService.hpp  Group.cpp  Group.hpp  LICENSE  Logger.cpp  Logger.hpp  MTLLoader.cpp  MTLLoader.hpp  Makefile  Node.cpp  Node.hpp  Object.cpp  Object.hpp  OpenGLDataInstance.cpp  OpenGLDataInstance.hpp  OpenGLInclude.cpp  (+34 more)
CMakeModules/: FindSDL2.cmake
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  main.cpp
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
coverage/: CMakeLists.txt
media/: barrel.mtl  barrel2.mtl  box.frag  box.vert  brazero.mtl  cavesseigneur.level  coin.mtl  colored-ball.mtl  corpsdegarde.level  doors.ini  flatshape.frag  flatshape.vert  floor.mtl  gate.mtl  ghost.mtl  gouraudshape.frag  gouraudshape.vert  grid.frag  grid.mtl  grid.vert  image.frag  image.vert  intro.level  key.mtl  lightBulb.mtl  muraille.level  oubliettes.level  outro.level  purse01.mtl  shape.frag  shape.vert  souslacour.level  text.frag  text.vert  triangle.frag  triangle.vert  vides.level  wallcube.mtl  woot.pcm
tests/: CMakeLists.txt  CheckElementGain.cpp  SceneGraphTest.cpp  WavefrontTest.cpp  mcut.hpp
